[package]
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
name = "anylog"
version = "0.6.4"
keywords = ["log", "parse"]
description = "A library for Rust that attempts to parse single log lines into records."
homepage = "https://github.com/mitsuhiko/rust-anylog"
documentation = "https://docs.rs/anylog"
license = "BSD-3-Clause"
readme = "README.md"
edition = "2018"

[dependencies]
chrono = { version = "0.4.10", default-features = false, features = ["clock", "std"] }
lazy_static = "1.4.0"
regex = { version = "1.3.3", default-features = false, features = ["std"] }

[dev-dependencies]
insta = "1.21.0"
